@@ -1,17 +1,19 @@
-ff97f5efb0259ea086c59f8e62c0eff3 *CHANGELOG
-517615ad3bde878aaf668262269e47ab *DESCRIPTION
+fe2d1616fd5ac36ff78fd85c8f99ef65 *CHANGELOG
+7af225487d85c930eabb189f4633b4f3 *DESCRIPTION
 b8744178270b0cb2dcbe8feb57543eac *LICENSE
-0be8f3a8cc7ad4d52dfefc821b14605e *NAMESPACE
-ed462981daf8373c9245b31abed94478 *R/HDoutliers.R
+63ec1782c238cd809562eeeb52dc7fce *NAMESPACE
+fd4b671c87f4579d6ef67113b4b8f3d7 *R/HDoutliers.R
+9a9d1583b1d0dedbc23c2ff1870787a2 *R/dataTrans.R
 5a775324becc5ab2dcb3e9abc13559b4 *R/getHDmembers.R
-40d1f71931a4d239a988420b6376cea6 *R/getHDoutliers.R
-d95d51e420b6114eaca75354e6c4ba9d *R/plotHDoutliers.R
+2c870e35941888c691b35892d8c11382 *R/getHDoutliers.R
+286d3dcf3d17d438aae5f1a0bd01f3a2 *R/plotHDoutliers.R
 d3ac0d870ae76c65a64aae0b3c566d5e *data/dots.rda
 9e467fdd8b9a2d2186d889f42e91c56a *data/ex2D.rda
 2a6b71f4fa9ec39b535866d6550990b1 *inst/doc/HDoutliers.pdf
-e6185c87ac0e1e8be631c6e31ee952f2 *man/HDoutliers.Rd
+33713fce38a10d26239840ba5061d0ed *man/HDoutliers.Rd
+4a449f3e904f49d54f84b1c2128f869b *man/dataTrans.Rd
 4a2e512ff240c826ef3fc0967866c59a *man/dots.Rd
 948960d0616c5958f041569b97e05645 *man/ex2D.Rd
-91b3af9aaa3a779bce732490abf4c926 *man/getHDmembers.Rd
-98b2a84bc7a9bf09e4e181298c6d016c *man/getHDoutliers.Rd
-ef2fc1c71ab6d08891693dc74cdf2e09 *man/plotHDoutliers.Rd
+502ed346769054eb9678551555e23fe4 *man/getHDmembers.Rd
+5e96479bf47b5b74a01eaf37b18f5b0e *man/getHDoutliers.Rd
+29935c03fc3e4256fad5fd10d5d5e279 *man/plotHDoutliers.Rd
