@@ -1,6 +1,6 @@
 import( FactoMineR, FNN, mclust)
 
-export( HDoutliers, getHDmembers, getHDoutliers, plotHDoutliers)
+export( HDoutliers, getHDmembers, getHDoutliers, plotHDoutliers, dataTrans)
 
 importFrom("grDevices", "rainbow")
 importFrom("graphics", "plot", "points")
